App icon for the admin app

--- a/heureuxadmin/src/main/res/values/strings.xml
+++ b/heureuxadmin/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Heureux Admin</string>
+    <string name="web_client_id">677063318293-es3337bf2p39rk836uo25b2s115q5pcv.apps.googleusercontent.com</string>
 </resources>
